Refactor Pet entity and schema; enhance CritterFunctionalTest with assertThat for consistency